# deployguard_repository_cleaner

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_INTEGRATION_GUIDE.md  CHANGELOG.md  CLI_GUIDE.md  CLI_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  Dockerfile  Dockerfile.api  FALSE_POSITIVE_REDUCTION.md  LICENSE  MANIFEST.in  PROJECT_DOCUMENTATION.md  README.md  README.md.old  README_OLD.md  REMEDIATION_GUIDE.md  USAGE_GUIDE.md  batch_process_repos.py  debug_scan.py  deployguard_master.py  deployguard_workflow.py  deployment.yml.template  docker-compose.api.yaml  docker-compose.yml  example_usage.py  execute_cleanup.py  export_secrets.py  full_workflow.py  generate_env_files.py  generate_github_workflow.py  github_actions_workflow.yml.template  order-processing-security-report.json  push_secrets_to_github.py  pyproject.toml  repos.yaml.example  requirements-api.txt  (+10 more)
.github/workflows/: deploy.yml  publish.yml
config/: secret_patterns.yaml  secret_patterns_backup.yaml
deployguard/: __init__.py
deployguard/api/: __init__.py  app.py  schemas.py
deployguard/api/routes/: __init__.py  feedback.py  (+5 more)
deployguard/cli/: __init__.py  auth.py  clean.py  hooks.py  main.py  multi_report_generator.py  remediate.py  report.py  report_generator.py  scan.py  serve.py  verify.py
deployguard/config/: secret_patterns.yaml
deployguard/core/: __init__.py  exceptions.py  history_cleaner.py  history_cleaner_fast.py  history_cleaner_old.py  models.py  remediator.py  scanner.py  scanner_fast.py  verifier.py
deployguard/utils/: __init__.py  config.py  logger.py
docs/: API_ARCHITECTURE.md  DATABASE_GUIDE.md  FEEDBACK_SYSTEM.md  QUALITY_IMPROVEMENT_PLAYBOOK.md  SECRETS_MANAGEMENT.md
k8s/: deployment.yaml
scripts/: dev.py
tests/: conftest.py  test_verifier.py
tests/unit/: test_exceptions.py  test_models.py  test_scanner.py
(+29 files in other folders)
